--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -174,9 +174,9 @@ Consistent with these results from NEON sites, higher wind speeds at greater hei
 **Air temperature, $T_{air}$, is sometimes significantly buffered by forest canopies (Fig. `r fig_NEON_vertical`).**
 Studies comparing $T_{air}$ under forest canopies with nearby clearings have found lower maximum temperatures under forest canopies globally [@defrenneGlobalBufferingTemperatures2019]. 
 
-The strength of this buffering varies with foliage characteristics mentioned above, and water availability [@davis_microclimatic_2019]. Diurnally, tropical, temperate broadleaf, mixed-conifer and non-pine conifer forests offset temperatures positively and negatively, by maintaining cooler, lower maximum temperature and vapor pressure deficit ($VPD$) in the daytime, and warmer higher minimum temperature during nighttime in the understory respectively, relative to pine and boreal forests and compared to nearby clearings [@vonarxSpatiotemporalEffectsForest2012a, *Defrenne et al. 2021*; @davis_microclimatic_2019; @zellweger_seasonal_2019; Rambo and North, 2009]. Similarly, when compared to neighboring tree crop agricultural plantations, intact tropical forests maintain lower understory peak daytime $T_{air}$ and $VPD$, attesting to increased buffering with LAI and canopy cover [@hardwickRelationshipLeafArea2015; @juckerCanopyStructureTopography2018]. On the other hand, open-forests with sparse stands, have lower buffering capacity, thus greater vertical air mixing, greater light permeability through canopy layers and sometimes greater soil heating [@ramboCanopyMicroclimateResponse2009]. Therefore, they maintain higher daytime maximum temperature and light availability in the understory, that are closer to nearby clearings [@defrenneGlobalBufferingTemperatures2019; @vonarxSpatiotemporalEffectsForest2012a; @martin_boundary_1999; @ramboCanopyMicroclimateResponse2009]. During the night, pine forests have shown to maintain warmer understory temperatures than above canopy, due to long wave infrared radiation from the soil caused by daytime solar warming [@vonarxSpatiotemporalEffectsForest2012a]. Canopy roughness also affects buffering, turbulent air flow and the canopy boundary layer. As a result, taller trees up to 20m in an old-growth Borneo forest (which coincided with forests of higher LAI) have shown to lower mean and max of VPD and temperature in the understory. However, beyond a certain tree height, temperature and VPD offset plateaus [@juckerCanopyStructureTopography2018; @hardwickRelationshipLeafArea2015]. 
+The strength of this buffering varies with foliage characteristics mentioned above, and water availability [@davis_microclimatic_2019]. Diurnally, tropical, temperate broadleaf, mixed-conifer and non-pine conifer forests offset temperatures positively and negatively relative to pine and boreal forests, and compared to nearby clearings. These forests maintain cooler, lower maximum temperature and vapor pressure deficit ($VPD$) in the daytime, and warmer higher minimum temperature during nighttime in the understory respectively. [@vonarxSpatiotemporalEffectsForest2012a, *Defrenne et al. 2021*; @davis_microclimatic_2019; @zellweger_seasonal_2019; Rambo and North, 2009]. Similarly, when compared to neighboring tree crop agricultural plantations, intact tropical forests maintain lower understory peak daytime $T_{air}$ and $VPD$, attesting to increased buffering with LAI and canopy cover [@hardwickRelationshipLeafArea2015; @juckerCanopyStructureTopography2018]. On the other hand, open-forests with sparse stands, have lower buffering capacity with greater vertical air mixing, greater light permeability through canopy layers and sometimes greater soil heating [@ramboCanopyMicroclimateResponse2009]. Therefore, they maintain higher daytime maximum temperature and light availability in the understory that are closer to nearby clearings [@defrenneGlobalBufferingTemperatures2019; @vonarxSpatiotemporalEffectsForest2012a; @martin_boundary_1999; @ramboCanopyMicroclimateResponse2009]. During the night, pine forests have shown to maintain warmer understory temperatures than above canopy, due to long wave infrared radiation from the soil from daytime solar warming [@vonarxSpatiotemporalEffectsForest2012a]. Buffering is also affected by Canopy roughness, turbulent air flow and the canopy boundary layer. As a result, taller trees upto 20m in an old-growth Borneo forest (which coincided with forests of higher LAI) have shown to lower mean and max of VPD and temperature in the understory. However, beyond a certain tree height, temperature and VPD offset plateaud [@juckerCanopyStructureTopography2018; @hardwickRelationshipLeafArea2015]. 
 
-Seasonally, the capacity to moderate buffering is greater with water availability. During the wet season, tropical forests in Panama [@rey-sanchez_spatial_2016], temperate forests in Switzerland [@vonarxSpatiotemporalEffectsForest2012a] and coastal forests in Brazil [@fauset_differences_2018, Tymen et al. 2017], have all shown to offset temperatures positively in the understory, with lower maximum air temperatures and higher relative humidity below canopies and understories than above forest canopies and gaps. During the dry season of a semi-deciduous tropical forest in Panama, however, maximum temperatures were similar in the upper and lower canopy, partially because in the dry season some canopy trees are leafless, resulting in more light reaching the sub-canopy, and more boundary layer turbulence [@rey-sanchez_spatial_2016]. Similar results were observed in a temperate deciduous forest in the eastern United States [@mcgregor_tree_nodate].
+Seasonally, the capacity to moderate buffering is greater with water availability. During the wet season, tropical forests in Panama [@rey-sanchez_spatial_2016], temperate forests in Switzerland [@vonarxSpatiotemporalEffectsForest2012a] and coastal forests in Brazil [@fauset_differences_2018, Tymen et al. 2017], have all shown to offset temperatures positively in the understory, with lower maximum air temperatures and higher relative humidity below canopies and understories than above forest canopies and gaps. However, during the dry season of a semi-deciduous tropical forest in Panama, maximum temperatures were similar in the upper and lower canopy, partially because in the dry season some canopy trees are leafless, resulting in more light reaching the sub-canopy, and more boundary layer turbulence [@rey-sanchez_spatial_2016]. Similar results were observed in a temperate deciduous forest in the eastern United States [@mcgregor_tree_nodate].
 
 Under colder conditions, minimum $T_{air}$ [$T_{min}$] is also buffered by forest canopies, increasing negetive temperature offset in the understory. Across Europe [@zellweger_seasonal_2019; *Defrenne et al. 2021*] and in the northwestern United States [@davis_microclimatic_2019] higher minimum temperatures under forest canopies have been observed relative to nearby clearings. Greater radiative heat loss in exposed areas results in lower $T_{min}$. However, similar minimum temperatures under forest canopies have been observed in tropical forests in Panama [@rey-sanchez_spatial_2016] and coastal Brazil [@fauset_differences_2018], as well as in a temperate deciduous forest in the eastern United States [@mcgregor_tree_nodate; @nakamuraForestsTheirCanopies2017].
 
@@ -199,7 +199,7 @@ Given that differences are small during the day when photosynthesis is occurring
 
 ### Geographic and climatic factors
 
-With higher altitude, forest light environment varies along with plant growth habits, therefore shapes microclimate conditions. In Switzerland forests, buffering capacity was stronger in low altitude forests than high altitude forests [@vonarxSpatiotemporalEffectsForest2012a], partly because trees in these high-altitude forests are sparserly distributed [@vonarxSpatiotemporalEffectsForest2012a] or have open canopies with greater light interception through canopy layers [@rajsnerovaMorphologicalBiochemicalPhysiological2015]. Less capacity to buffer climatic conditions in open, high altitude forests might have implications to forest regeneration and climate change [@vonarxSpatiotemporalEffectsForest2012a; @fauset_differences_2018]. This is also observed in  timberline and temperate humid-mountain forests in China, where tree height decreased with altitude, and tree growth sensitivity (based on tree-rings) increased [@liangForestTypeHeight2019]. 
+With higher altitude, forest light environment varies along with plant growth habits, therefore shapes microclimate conditions. In Switzerland forests, buffering capacity has shown to be stronger in low altitude forests than high altitude forests [@vonarxSpatiotemporalEffectsForest2012a], partly because trees in these high-altitude forests are sparserly distributed [@vonarxSpatiotemporalEffectsForest2012a] or have open canopies with greater light interception through canopy layers [@rajsnerovaMorphologicalBiochemicalPhysiological2015]. Less capacity to buffer climatic conditions in open, high altitude forests might have implications to forest regeneration and climate change [@vonarxSpatiotemporalEffectsForest2012a; @fauset_differences_2018]. This is also observed in  timberline and temperate humid-mountain forests in China, where tree height decreased with altitude, and tree growth sensitivity (based on tree-rings) increased [@liangForestTypeHeight2019]. 
 
 The strength of buffering also varies with respect to distance to the coast, topographic position, elevation [@zellweger_seasonal_2019]. Riparian forests tend to sustain buffering, protecting understory temperatures even during increasing temperature extremes compared to open areas by a stream [@davis_microclimatic_2019; @macekMaximumAirTemperature2019]
 
@@ -208,12 +208,12 @@ The strength of buffering also varies with respect to distance to the coast, top
 ### Biophysical drivers
 
 **Many of the vertical gradient biophysical and trait variables reviewed above affect leaf temperature, $T_{leaf}$, which in turn has a strong influence on leaf metabolism (see following section).**
-Maintaining optimum leaf temperature for metabolic optima in relation to the biophysical environment, maximizes carbon assimilation in a given circumstance. This is done through the adaptation of leaf traits to the surrounding biophysical environment [@michaletzPlantThermoregulationEnergetics2015; @perezPhotosyntheticHeatTolerances2020].Thus, $T_{leaf}$ is determined by the energy balance of a leaf, influenced by leaf traits, and can be estimated based on basic biophysical principles [@campbell_introduction_1998; @muir_tealeaves_2019; @michaletzEnergeticCarbonEconomic2016] (Fig. `r fig_leaf_T`). The difference between $T_{leaf}$ and $T_{air}$ is determined as a function of energy input (through radiation or heat) versus heat lost (such as transpiration) to the environment [Fig. `r fig_NEON_vertical`; @michaletzPlantThermoregulationEnergetics2015]. 
+For leaves, maintaining optimum leaf temperature for metabolic optima in relation to the biophysical environment, maximizes carbon assimilation in a given circumstance. This is done through the adaptation of leaf traits to the surrounding biophysical environment [@michaletzPlantThermoregulationEnergetics2015; @perezPhotosyntheticHeatTolerances2020]. Thus, $T_{leaf}$ is determined by the energy balance of a leaf, influenced by leaf traits, and can be estimated based on basic biophysical principles [@campbell_introduction_1998; @muir_tealeaves_2019; @michaletzEnergeticCarbonEconomic2016] (Fig. `r fig_leaf_T`). The difference between $T_{leaf}$ and $T_{air}$ is determined as a function of energy input (through radiation or heat) versus heat lost (such as transpiration) to the environment [Fig. `r fig_NEON_vertical`; @michaletzPlantThermoregulationEnergetics2015]. When leaves are cooler than air at high temperature and warmer than air at low temperature, they considered to exhibit limited homeothermy. When leaves are drastically warmer than $T_{air}$ such as in the upper canopy, this is considered megathermy. In some cases, $T_{leaf}$ can be equalled to $T_{air}$, showing poikiolothermic behavior [Cavaleri, 2020].
 
 ![**Figure `r fig_leaf_T`. Theoretical expectations for variation in the elevation of $T_{leaf}$ above $T_{air}$ in response to (a) shortwave radiation, (b) wind speed, (c) relative humidity, (d) leaf width, and (e) stomatal conductance.** Leaf temperatures were modeled using the tealeaves R package of @muir_tealeaves_2019 parameterized to represent typical conditions for a broadleaf species (*Quercus rubra*) in a mesic temperate forest (Harvard Forest, Massachusetts, USA), as detailed in Appendix `r appendix_tealeaves_methods`. [ISSUE #6](https://github.com/EcoClimLab/vertical-thermal-review/issues/6).](leaf_energy_balance/leaf_energy_balance.png)
 
 **(paragraph on radiation as a driver)**
-Incoming solar radiation is a strong driver of leaf temperature, relative to $T_{air}$, such that even at low maximum $T_{air}$, leaves exposed to high radiation loads can experience elevated $T_{leaf}$, greater than $T_{air}$. On the other hand, under conditions of constant radiation and water availability, increase in $T_{air}$ induces evaporative cooling [@cavaleriColdbloodedForestsWarming2020] or under high $T_{air}$ and stomtal limitation, can cause leaf heat stress [@fauset_differences_2018]. 
+Incoming solar radiation is a strong driver of leaf temperature, relative to $T_{air}$, such that even at low maximum $T_{air}$, leaves exposed to high radiation loads can experience elevated $T_{leaf}$, greater than $T_{air}$. On the other hand, under conditions of constant radiation and water availability, evaporative cooling sustains $T_{leaf}$ under increased $T_{air}$ [@cavaleriColdbloodedForestsWarming2020] until stomtal limitation impedes cooling, which causes leaf heat stress [@fauset_differences_2018]. 
 
 Greater upper canopy wind speeds (Fig. `r fig_NEON_vertical`) result in higher boundary layer conductance ($g_{a}$) for canopy leaves, which increases linearly with wind velocity [@daudetWindSpeedLeaf1999a]. 
 Large $g_{a}$ to heat transfer, in turn, results in a smaller difference between $T_{leaf}$ and $T_{air}$. 
@@ -221,7 +221,7 @@ In low wind conditions, because $g_{a}$ to heat transfer is comparatively small,
 Additionally, the thickness of the air layer is proportional to boundary layer resistance at the surface of the leaf through which water vapor diffuses after leaving the stomata. This tends to be greater in the understory than in the canopy [@martin_boundary_1999; @robertsStomatalBoundaryLayerConductances1990a; @stokesBoundaryLayerConductance2006]
 
 **(paragraph on hydraulics as a driver of leaf T:e.g., water on leaves - evaporative cooling - and leaf water content)**
-Leaf thermoregulation is also a tradeoff between water use strategy and optimum leaf temperature, which is influenced by stomtal conductance that facilitates heat dissapation and leaf water content that affects the rate of leaf warming [@fauset_differences_2018; @kochDiurnalPatternsLeaf1994]. Leaves with open stomata can maintain $T_{leaf}$ similar to $T_{air}$ at high radiation loads, *with coolest leaves at intermediate sizes (~10mm)*. 
+Leaf thermoregulation is a tradeoff between water use strategy and optimum leaf temperature, which is influenced by stomtal conductance that facilitates heat dissapation and leaf water content that affects the rate of leaf warming [@fauset_differences_2018; @kochDiurnalPatternsLeaf1994]. Leaves with open stomata can maintain $T_{leaf}$ similar to $T_{air}$ at high radiation loads, *with coolest leaves at intermediate sizes (~10mm)*. 
 Under hot conditions, canopy leaves exposed to higher wind speeds would be most effective at cooling when sufficient water is available to maintain high stomatal conductance [Drake et al. 2018].  However, in circumstances such as during the midday, $T_{leaf}$ can become highly elevated above $T_{air}$ when $g_{s}$ or $g_{a}$ is low. This is caused by increase in air temperature and VPD, which limits stomatal conductance along with decreased leaf water content and leaf CO~2~ [@kochDiurnalPatternsLeaf1994; @fauset_differences_2018]. On the other hand, shaded understory leaves under closed canopies should tend to maintain cooler daytime leaf temperatures for any given level of stomatal conductance. 
 
 **In addition, leaf size and morphology, which vary dramatically across the vertical gradient (reviewed in following section), impact $g_{a}$ and therefore leaf temperature.** 
@@ -232,10 +232,9 @@ While small leaves remain within a few degrees of $T_{air}$, regardless of stoma
 ### In-situ observations
 
 **Vertical profiles in microclimate (Fig. `r fig_NEON_vertical`), leaf traits (see following section), and *evapotranspiration* (*where is this discussed? and do we say anything about evaporation?*) together shape in-situ leaf temperatures according to the principles outlined above (Fig. `r fig_leaf_T`).** 
-While the high-light environment of the upper canopy would tend to dramatically increase $T_{leaf}$ above $T_{air}$, particularly under low-wind conditions, strong vertical gradients in leaf morphology and sometimes *evapotranspiration* have a counteractive effect, such that vertical trends in $T_{leaf}$ are much less pronounced than would be expected based on the physical setting alone.
+Canopy buffering capacity, as well vertical biophysical gradient, affects vertical distribution of leaf temperature. While the high-light environment of the upper canopy would tend to dramatically increase $T_{leaf}$ above $T_{air}$, particularly under low-wind conditions, strong vertical gradients in leaf morphology and sometimes *evapotranspiration* have a counteractive effect, such that vertical trends in $T_{leaf}$ are much less pronounced than would be expected based on the physical setting alone.
 
-
-Particularly, in open forests with sparse distribution of trees, such as in needle-leaf forests, lower canopy $T_{leaf}$ can be substantially warmer than upper canopy $T_{leaf}$, reflecting microclimate conditions of either increased vertical air mixing or heating from the ground [@mullerEvidenceEfficientNonevaporative2021], light permeating through canopy layers and low wind velocity or still air in the lower canopy compared to the upper canopy [@mullerEvidenceEfficientNonevaporative2021; @martin_boundary_1999; @zweifelMiddayStomatalClosure2002; @hadleyInfluenceKrummholzMat1987]. Greater heat stress and $T_{air}$ in the lower canopy closer is also observed in Australian desert trees [Curtis et al.2018] and among timberline krummholz needle-leaf trees, both growing close to the ground [@hadleyInfluenceKrummholzMat1987].  Similarly, in dry conditions, in a semi-decidudous tropical moist forest in Panama where some trees loss canopy leaves, sun leaves can be cooled relative to $T_{air}$ more than lower canopy shade leaves [@rey-sanchez_spatial_2016]. In other dry conditions, inner canopy can be warmer than above canopy and air temperature due to greater relative humidity [@dietzVerticalPatternsDuration2007]. Under other conditions $T_{leaf}$ tracks $T_{air}$ and therefore differs little between understory and canopy (Fig. `r fig_NEON_vertical`).
+Particularly, in open forests with sparse distribution of trees and lower buffering capacity, as observed in needle-leaf forests, lower canopy $T_{leaf}$ can be substantially warmer than upper canopy $T_{leaf}$, reflecting microclimate conditions of either increased vertical air mixing or heating from the ground [@mullerEvidenceEfficientNonevaporative2021], light permeating through canopy layers and low wind velocity or still air in the lower canopy compared to the upper canopy [@mullerEvidenceEfficientNonevaporative2021; @martin_boundary_1999; @zweifelMiddayStomatalClosure2002; @hadleyInfluenceKrummholzMat1987]. Greater heat stress and $T_{air}$ in the lower canopy is also observed in open Australian desert trees [Curtis et al.2018] and among timberline krummholz needle-leaf trees, both growing close to the ground [@hadleyInfluenceKrummholzMat1987], this is analogous to greenhouse effect caused under dense lower canopies.  Similarly, in dry conditions, in a semi-decidudous tropical moist forest in Panama where some trees loss canopy leaves, sun leaves can be cooled relative to $T_{air}$ more than lower canopy shade leaves [@rey-sanchez_spatial_2016]. In other tropical dry conditions, inner canopy can be warmer than above canopy and air temperature due to conditions of greater relative humidity [@dietzVerticalPatternsDuration2007]. Under other conditions $T_{leaf}$ tracks $T_{air}$ and therefore differs little between understory and canopy (Fig. `r fig_NEON_vertical`).
 
 At night when solar radiation is not a factor, differences in $T_{leaf}$ across the vertical gradient are very modest; for instance, @bolstad_foliar_1999 observed similar nighttime $T_{leaf}$'s in the canopy and understory	of a temperate broadleaf forest. 
 
@@ -302,7 +301,7 @@ Along the vertical gradient, exposed leaves are better equipped to dissapate hea
 
 #### Biochemical and physiological traits
 
-Canopy nitrogen distribution along the vertical gradient optimizes to prevent photoinhition for sun leaves during direct light and shade leaves during sunflecks, and could mediate sun vs. shade leaf response to heatflecks under available soil nitrogen content [@kitaoCanopyNitrogenDistribution2018]. Therefore, during growing season, nitrogen per area [$N_{area}$], along with LMA, leaf soluble sugars, starch and non-structural carbons increase with height and light, typically greater in exposed canopy positions or sun leaves compared to shade [@cobleLightDrivesVertical2014a; @cobleHowVerticalPatterns2016; Weerasinghe et al. 2014]. Phosphorous per area follows a similar trend along the canopy gradient, but with increased growth at higher light P uptake, in some cases, cannot keep up and thus shows variable results [@poorterMetaanalysisPlantResponses2019a]  
+Canopy nitrogen distribution along the vertical gradient optimizes to prevent photoinhition for sun leaves during direct light and shade leaves during sunflecks, and could mediate sun vs. shade leaf response to heatflecks under available soil nitrogen conditions [@kitaoCanopyNitrogenDistribution2018]. Therefore, during growing season, nitrogen per area [$N_{area}$], along with LMA, leaf soluble sugars, starch and non-structural carbons increase with height and light, typically greater in exposed canopy positions or sun leaves compared to shade [@cobleLightDrivesVertical2014a; @cobleHowVerticalPatterns2016; Weerasinghe et al. 2014]. Phosphorous per area follows a similar trend along the canopy gradient, but with increased growth at higher light P uptake, in some cases, cannot keep up and thus shows variable results [@poorterMetaanalysisPlantResponses2019a]  
  
 ##### *(Carotenoids/Xanthophyll cycle pigments)*
 
@@ -323,7 +322,7 @@ Proportional to vertical light gradients at an intra- and inter-species level, s
 
 ### Interspecific varaiation 
 
-Across tree-size ontogeny, canopy and understory trees of same species in tropical, temperate, and conifer forests show fundamental light adapted leaf traits in their biophysical environment, as observed and similar to within-species gradient [@@rozendaalPlasticityLeafTraits2006; @thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012]. Isolating ontogeny, under constant light conditions of open-grown canopy and understory trees, for example in large gaps, differences in traits showed significantly greater LMA, photosynthetic capcity per area, and stomatal conductance in taller canopy trees compared to saplings [@@thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012]. Across  multi-species canopy and understory, while fundamental adaptations to light and water are observed, their pasticity to light differs along with inherent traits such as leaf shape, size and width, stomtal conductance levels influence leaf temperatures. Therefore, some species might more susceptible to heat stress at a vertical gradient than others [@fauset_differences_2018]. 
+Across tree-size ontogeny, canopy and understory trees of same species in tropical, temperate, and conifer forests show fundamental light adapted leaf traits in their biophysical environment, as observed and similar to within-species gradient [@rozendaalPlasticityLeafTraits2006; @thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012]. Isolating ontogeny, under constant light conditions of open-grown canopy and understory trees, for example in large gaps, differences in traits showed significantly greater LMA, photosynthetic capcity per area, and stomatal conductance in taller canopy trees compared to saplings [@thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012]. Across  multi-species canopy and understory, while fundamental adaptations to light and water are observed, their pasticity to light differs along with inherent traits such as leaf shape, size and width, stomtal conductance levels and therefore influence leaf temperatures.As a result, some species might be more susceptible to heat stress at a vertical gradient than others [@fauset_differences_2018]. 
 
 Ontogenetic differences also suggests shade tolerators have lower leaf dry mass per area ($M_A$), greater photosynthetic capacity in low light and greater carbon gain capacities than in intolerators [@niinemetsControversyTraitsConferring2006]. While shade intolerant species experience greater heterogeneity in light during ontogeny [poorter et al. 2013]. However, these findings conflict with  Kitajima 1994 who found for tropical seedlings; shade intolerance species grew faster in the sun and in the shade, but at the cost of higher mortality in the shade. Lawren and Karoru had contrasting findinds, and so far appears that there is no a consensus? How will leaf temperature vary between the two?
 
@@ -381,14 +380,14 @@ For 3 species in Panama, the optimum temperature for sun leaves tended to be sli
 **Leaf thermal tolerance (Tcrit/ T50)**
 $T_{crit}$ is the temperature at which efficiency of photosystem II starts to decrease, based on chlorphyll a flourescence; and $T_{50}$ represents temperature at which the efficiency of photosystem II had decreased by 50% [Slot et al. 2020]. Leaf thermal thresholds strongly reflect species adaptation to their microenvironment rather than macroclimate conditions [@feeley_thermal_2020; Slot et al. 2020; Perez and Feely 2020a] and phylogeny [Slot et al. 2020; Perez and Feeley 2020a]. 
 
-Typical values across latitude and climate are ~45-50$^\circ$C (O' sullivan et al. 2017). Across forest species, in Panama, Columbia and across latitudes, $T_{50}$ and $T_{crit}$ decreased with elevation [@feeley_thermal_2020;  @slotLeafHeatTolerance2020; @osullivanThermalLimitsLeaf2017] and varies with leaf traits [Sastry et al. 2018, @zhang_photosynthetic_2012; @slotLeafHeatTolerance2020]. Species with large leaves, and slow heating and cooling time [higher thermal time constant] showed greater $T_{crit}$. On the other hand, leaves of species with greater construction costs, observed through LMA, had greater $T_{50}$ compared to species with low LMA [@slotLeafHeatTolerance2020]. However, higher photosynthetic heat tolerance does not necessary increase the breadth of leaf thermal safety margins. Rather, in across species sun leaves, higher photosynthetic heat tolerance experienced higher maximum leaf temperatures, and showed low optimum temperature for C assimilation [$T_{opt}$] and therefore had narrower breadth of thermal safety margins (difference between maximum leaf temperature and $T_{50}$) [@perezPhotosyntheticHeatTolerances2020]
+Across forest species, typical values across latitude and climate are ~45-50$^\circ$C (O' sullivan et al. 2017). $T_{50}$ and $T_{crit}$ decreases with elevation, as seen in tropical forests in Panama and Columbia and across latitudes [@feeley_thermal_2020;  @slotLeafHeatTolerance2020; @osullivanThermalLimitsLeaf2017] and varies with leaf traits [Sastry et al. 2018, @zhang_photosynthetic_2012; @slotLeafHeatTolerance2020]. Species with large leaves, and slow heating and cooling time [higher thermal time constant] showed greater $T_{crit}$. On the other hand, leaves of species with greater construction costs, observed through LMA, had greater $T_{50}$ compared to species with low LMA [@slotLeafHeatTolerance2020]. However, higher photosynthetic heat tolerance does not necessary increase the breadth of leaf thermal safety margins. Rather, in across species sun leaves, higher photosynthetic heat tolerance experienced higher maximum leaf temperatures, and showed low optimum temperature for C assimilation [$T_{opt}$] and therefore had narrower breadth of thermal safety margins (difference between maximum leaf temperature and $T_{50}$) [@perezPhotosyntheticHeatTolerances2020]
 
 **Thermal tolerance (e.g., $T_{50}$) varies with exposure, but there are no studies isolating effect of height.**
 Thermal tolerance $T_{crit}$ and $T_{50}$ have been predominantly measured on sun leaves; thus there remains limited information on leaves with varying light exposures and vertical height gradient. 
 
-For two of three species studied in a tropical moist forest in Panama, $T_{50}$ was slightly lower for shade than sun-exposed leaves, though the results weren't significant and both were measured near ground level [@slotPhotosyntheticHeatTolerance2019a]. In tall grass prarie gallery forest in Kansas, photosynthetic heat tolerance measured on chinquapin oak (*Quercus muehlenbergii*) that grew in xeric, sunnier conditions had higher heat tolerance (by $2{^\circ}C$) than bur oak (*Quercus macrocarpa*) that grew in shaded mesic conditions. In both species photosynthetic heat tolerance increased from June to August [Knapp et al. 1994]
+For two of three species studied in a tropical moist forest in Panama, $T_{50}$ was slightly lower for shade than sun-exposed leaves, though the results weren't significant and both were measured near ground level [@slotPhotosyntheticHeatTolerance2019a]. In tall grass prarie gallery forest in Kansas, photosynthetic heat tolerance measured on chinquapin oak (*Quercus muehlenbergii*) that grew in xeric, sunnier conditions had higher heat tolerance (by $2{^\circ}C$) than bur oak (*Quercus macrocarpa*) that grew in shaded mesic conditions. In both species photosynthetic heat tolerance increased seasonally from June to August [Knapp et al. 1994]
 
-In other cases, leaf thermal tolerance reflects microclimatic stress along a vertical gradient. For *Acacia Papyrocarpa* (Benth.) trees in an arid region of southern Australia, higher composite climate stress and thus $T_{50}$ was observed in the lower north-facing canopy position compared to other canopy positions (Curtis et al. 2019). Greater $T_{50}$ in lower north-position correlated with longer leaf thermal time constants, along with with low-wind speed and greater canopy and air temperature [@curtis_intracanopy_2019]. 
+In other cases, leaf thermal tolerance reflects microclimatic stress along a vertical gradient. For *Acacia Papyrocarpa* (Benth.) trees in an arid region of southern Australia, higher composite climate stress and thus $T_{50}$ was observed in the lower north-facing canopy position compared to other canopy positions. Greater $T_{50}$ in lower north-position also correlated with longer leaf thermal time constants, along with with low-wind speed and greater canopy and air temperature [@curtis_intracanopy_2019]. 
 
 We're not aware of any other studies on this."we may want to argue that we have no *a priori* reasons to expect thermal tolerance to scale with height per se (or do we?). I think it makes sense to expect variation with light exposure because of the associated differences in temperature you can expect the leaves to be exposed to, but height itself should not affect heat tolerance other than through associated traits perhaps"--Martijn Slot*
 
@@ -397,7 +396,7 @@ We're not aware of any other studies on this."we may want to argue that we have 
 
 **Similar to photosynthesis, respiration tends to be higher in sun leaves (Chen et al. 2020), but its temperature sensitivity appears to be similar between between sun and shade leaves.**
 
-While dark and light respiration tends to increase along the vertical gradient, with greater respiration in canopy leaves [@bolstad_foliar_1999; Weerasinghe et al.2014], temperature sensitivity of respiration, $Q_{10}$, shows conflicting findings with no definite trend.
+While dark and light respiration tends to increase along the vertical gradient, with greater respiration in canopy leaves [@bolstad_foliar_1999; Weerasinghe et al.2014], temperature sensitivity of respiration--$Q_{10}$--shows conflicting findings with no definite trend.
 
 In two forests, north-eastern oak dominated-deciduous forest in the US and conifer-dominated temperate New Zealand rainforest, across species $Q_{10}$ was found to be greater in upper-canopy leaves than in lower-canopy leaves, where values differed between species [@turnbullScalingFoliarRespiration2003]. Similarly, in sweetgum (*Liquidambara styraciflua*), upper canopy sun leaves showed greater $Q_{10}$ than lower within-canopy shade leaves [@harleyEffectsLightTemperature1996]. However, in other feild studies, $Q_{10}$ didnot vary across species vertical profiles and light exposure such as in a lowland tropical Australian forest study [@weerasingheCanopyPositionAffects2014], and across temperate trees at Coweeta [@bolstad_foliar_1999] $Q_{10}$. At Coweeta, Q10 showed a variable pattern, with a slight tendency to increase down the canopy [@bolstad_foliar_1999]. (*Martijn has some unpublished data on this that we might include.unpublished data showing higher Q10 in shade than in sun leaves for 10 species or so. May make sense to include here: https://github.com/EcoClimLab/vertical-thermal-review/issues/8.*). Combining reference respiration and $Q_{10}$, @bolstad_foliar_1999 found  a modest net decrease in R for understory leaves relative to canopy leaves as T increases (*see their Fig. 1*). @bolstad_foliar_1999 found evidence of acclimation, but there remained a declining trend of respiration with elevation.
 
