--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -314,6 +314,7 @@ Proportional to vertical light gradients at an intra- and inter-species level, s
 ##### *Leaf lifespan* [Elsa: phenology more broadly? - leaf lifespan, fruiting, flowering links to temperature and thermal gradients?]
 *Leaf lifespan generally increases with LMA. LMA and leaflifespan is greater with available light, and largely depends on the cost of carbon investment in a leaf, which varies across species sun vs. shade leaves [**double check**] Leaf turnover tends to be greater in the sun (in the tropics), so of your standing stock of leaves (at least in evergreen species) sun leaves should be younger than shade leaves. This is bound to affect metabolism, and may affect other aspects of their performance.*
 
+
 ##### *Deciduousness*
 
 
@@ -325,6 +326,8 @@ Proportional to vertical light gradients at an intra- and inter-species level, s
 Across tree-size ontogeny, canopy and understory trees of same species in tropical, temperate, and conifer forests show fundamental light adapted leaf traits in their biophysical environment, as observed and similar to within-species gradient [@rozendaalPlasticityLeafTraits2006; @thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012]. Isolating ontogeny, under constant light conditions of open-grown canopy and understory trees, for example in large gaps, differences in traits showed significantly greater LMA, photosynthetic capcity per area, and stomatal conductance in taller canopy trees compared to saplings [@thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012]. Across  multi-species canopy and understory, while fundamental adaptations to light and water are observed, their pasticity to light differs along with inherent traits such as leaf shape, size and width, stomtal conductance levels and therefore influence leaf temperatures.As a result, some species might be more susceptible to heat stress at a vertical gradient than others [@fauset_differences_2018]. 
 
 Ontogenetic differences also suggests shade tolerators have lower leaf dry mass per area ($M_A$), greater photosynthetic capacity in low light and greater carbon gain capacities than in intolerators [@niinemetsControversyTraitsConferring2006]. While shade intolerant species experience greater heterogeneity in light during ontogeny [poorter et al. 2013]. However, these findings conflict with  Kitajima 1994 who found for tropical seedlings; shade intolerance species grew faster in the sun and in the shade, but at the cost of higher mortality in the shade. Lawren and Karoru had contrasting findinds, and so far appears that there is no a consensus? How will leaf temperature vary between the two?
+
+*from Martijn in Tleaves figure: One thing that might be more relevant in tropical than in seasonal temperate forests, is the issue I mentioned before about the difference between shade leaves of canopy trees and leaves of understory species. The understory species in the tropics (the ones that won't necessarily make it to the canopy, and can reproduce in the understory) appear to invest more in leaf longevity than in light harvesting per se, so even though they are in the shade, they do not have large leaves with low LMA. This would be a deviation on, or a special case of, the understory parameters you are using now. I don't think we necessarily need to incorporate that in this figure, but I think it would be useful to be able to say that for understory species with small, high LMA leaves the effects of windspeed, radiation, RH, etc, are greater/smaller than for the understory species parameters in the figure. DOes this make sense? Is this relevant at all for seasonal forests? The only thing that comes to mind is Ilex, but maybe there are other species?*
 
  *(KAT: a lot of this content should probably move up the the intro to this section)*
 
