--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -837,6 +837,23 @@
   number = {4}
 }
 
+@article{cavender-baresChangesDroughtResponse2000,
+  title = {Changes in Drought Response Strategies with Ontogeny in {{Quercus}} Rubra: Implications for Scaling from Seedlings to Mature Trees},
+  shorttitle = {Changes in Drought Response Strategies with Ontogeny in {{Quercus}} Rubra},
+  author = {Cavender-Bares, J. and Bazzaz, F. A.},
+  date = {2000-07-21},
+  journaltitle = {Oecologia},
+  volume = {124},
+  pages = {8--18},
+  issn = {0029-8549},
+  doi = {10.1007/PL00008865},
+  url = {http://link.springer.com/10.1007/PL00008865},
+  urldate = {2021-05-04},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\C9QIB5S9\\Cavender-Bares and Bazzaz - 2000 - Changes in drought response strategies with ontoge.pdf},
+  langid = {english},
+  number = {1}
+}
+
 @online{ChapterTimeSeries,
   title = {Chapter 2 {{Time}} Series Graphics | {{Forecasting}}: {{Principles}}~and~{{Practice}}},
   url = {https://otexts.com/fpp2/graphics.html},
@@ -5193,6 +5210,25 @@
   number = {3}
 }
 
+@article{novickIncreasingImportanceAtmospheric2016,
+  title = {The Increasing Importance of Atmospheric Demand for Ecosystem Water and Carbon Fluxes},
+  author = {Novick, Kimberly A. and Ficklin, Darren L. and Stoy, Paul C. and Williams, Christopher A. and Bohrer, Gil and Oishi, A. Christopher and Papuga, Shirley A. and Blanken, Peter D. and Noormets, Asko and Sulman, Benjamin N. and Scott, Russell L. and Wang, Lixin and Phillips, Richard P.},
+  date = {2016-11},
+  journaltitle = {Nature Climate Change},
+  volume = {6},
+  pages = {1023--1027},
+  publisher = {{Nature Publishing Group}},
+  issn = {1758-6798},
+  doi = {10.1038/nclimate3114},
+  url = {http://www.nature.com/articles/nclimate3114},
+  urldate = {2021-05-04},
+  abstract = {During periods of hydrologic stress, vegetation productivity is limited by soil moisture supply and atmospheric water demand. This study shows that atmospheric demand has a greater effect in many biomes, with implications for climate change impacts.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\9KWCYHMP\\Novick et al. - 2016 - The increasing importance of atmospheric demand fo.pdf;C\:\\Users\\Me\\Zotero\\storage\\JN5MRPU3\\nclimate3114.html},
+  issue = {11},
+  langid = {english},
+  number = {11}
+}
+
 @article{ntawuhiganayoTraitsControllingShade2020,
   title = {Traits Controlling Shade Tolerance in Tropical Montane Trees},
   author = {Ntawuhiganayo, Elisée Bahati and Uwizeye, Félicien K and Zibera, Etienne and Dusenge, Mirindi E and Ziegler, Camille and Ntirugulirwa, Bonaventure and Nsabimana, Donat and Wallin, Göran and Uddling, Johan},
@@ -5242,6 +5278,23 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\TNYPVSW8\\FP08127.html},
   langid = {english},
   number = {6}
+}
+
+@article{oishiWarmerTemperaturesReduce2018,
+  title = {Warmer Temperatures Reduce Net Carbon Uptake, but Do Not Affect Water Use, in a Mature Southern {{Appalachian}} Forest},
+  author = {Oishi, A. Christopher and Miniat, Chelcy F. and Novick, Kimberly A. and Brantley, Steven T. and Vose, James M. and Walker, John T.},
+  date = {2018-04-15},
+  journaltitle = {Agricultural and Forest Meteorology},
+  volume = {252},
+  pages = {269--282},
+  issn = {0168-1923},
+  doi = {10.1016/j.agrformet.2018.01.011},
+  url = {https://www.sciencedirect.com/science/article/pii/S016819231830011X},
+  urldate = {2021-05-04},
+  abstract = {Increasing air temperature is expected to extend growing season length in temperate, broadleaf forests, leading to potential increases in evapotranspiration and net carbon uptake. However, other key processes affecting water and carbon cycles are also highly temperature-dependent. Warmer temperatures may result in higher ecosystem carbon loss through respiration and higher potential evapotranspiration through increased atmospheric demand for water. Thus, the net effects of a warming planet are uncertain and highly dependent on local climate and vegetation. We analyzed five years of data from the Coweeta eddy covariance tower in the southern Appalachian Mountains of western North Carolina, USA, a highly productive region that has historically been underrepresented in flux observation networks. We examined how leaf phenology and climate affect water and carbon cycling in a mature forest in one of the wettest biomes in North America. Warm temperatures in early 2012 caused leaf-out to occur two weeks earlier than in cooler years and led to higher seasonal carbon uptake. However, these warmer temperatures also drove higher winter ecosystem respiration, offsetting much of the springtime carbon gain. Interannual variability in net carbon uptake was high (147 to 364 g C m−2 y−1), but unrelated to growing season length. Instead, years with warmer growing seasons had 10\% higher respiration and sequestered ∼40\% less carbon than cooler years. In contrast, annual evapotranspiration was relatively consistent among years (coefficient of variation = 4\%) despite large differences in precipitation (17\%, range = 800 mm). Transpiration by the evergreen understory likely helped to compensate for phenologically-driven differences in canopy transpiration. The increasing frequency of high summer temperatures is expected to have a greater effect on respiration than growing season length, reducing forest carbon storage.},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\K45KARK2\\Oishi et al. - 2018 - Warmer temperatures reduce net carbon uptake, but .pdf;C\:\\Users\\Me\\Zotero\\storage\\MX5QBCUT\\S016819231830011X.html},
+  keywords = {Complex terrain,Drought,Ecosystem respiration,Gross primary productivity,Net ecosystem exchange,Net ecosystem productivity},
+  langid = {english}
 }
 
 @article{oldhamHydrostaticGradientNot2010,
@@ -5516,6 +5569,23 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\55H2RDES\\Pearcy et al. - 2005 - Crown architecture in sun and shade environments .pdf;C\:\\Users\\Me\\Zotero\\storage\\ACCC99GP\\j.1469-8137.2005.01328.html},
   keywords = {biomechanics,chlorophyll fluorescence,chronic photoinhibition,dynamic photoinhibition,FV/ FM,hydraulic architecture,three-dimensional models},
   langid = {english},
+  number = {3}
+}
+
+@article{pearcyPhotosyntheticGasExchange1987,
+  title = {Photosynthetic {{Gas Exchange Responses}} of {{Australian Tropical Forest Trees}} in {{Canopy}}, {{Gap}} and {{Understory Micro}}-{{Environments}}},
+  author = {Pearcy, R. W.},
+  date = {1987},
+  journaltitle = {Functional Ecology},
+  volume = {1},
+  pages = {169--178},
+  publisher = {{[British Ecological Society, Wiley]}},
+  issn = {0269-8463},
+  doi = {10.2307/2389419},
+  abstract = {The photosynthetic responses of three tropical tree species were investigated in the contrasting micro-environments of the canopy, a gap and the understory of a tropical forest in north-eastern Australia. Measurements were made with a small transportable field gas exchange apparatus on the evergreen species Argyrodendron peralatum (F.M. Bailey) Edlin ex I.H. Boas and Castanospermum australe (Cunn.) Frazer and Cook, which regenerate in the understory and the deciduous gap species Toona australis (F. Muell.) Harms. Acclimation to the prevailing light environment was evident in all species, with the canopy leaves having higher light saturated photosynthetic rates, dark respiration rates and stomatal conductances than the understory leaves. For A. peralatum, leaves in the gap were generally intermediate between those in the canopy and understory. There was no evidence for acclimation to the differences in temperature or leaf-air vapour pressure deficits between the canopy and understory leaves. Determinations of the daily courses of CO\textsubscript{2} uptake showed that although the daily photon flux density (PFD) in the understory was only 3\% of that at the canopy top, leaf carbon gain was nearly 10\% of that measured for the canopy leaf. In the understory, photosynthesis during sunflecks accounted for about one third of the daily carbon gain. There was no evidence that temperatures or leaf-air vapour pressure deficits significantly limited CO\textsubscript{2} uptake in the canopy.},
+  eprint = {2389419},
+  eprinttype = {jstor},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\NAWFDZYV\\Pearcy - 1987 - Photosynthetic Gas Exchange Responses of Australia.pdf},
   number = {3}
 }
 
