--- a/vertical-thermal-review_SI.Rmd
+++ b/vertical-thermal-review_SI.Rmd
@@ -65,7 +65,7 @@ see [Issue 2](https://github.com/EcoClimLab/vertical-thermal-review/issues/2) , 
 
 METHODS ON TEALEAVES GO HERE.
 
-Energy balance for typical overstory sun leaf and understory shade leaf were parameterized with biophysical variables from Harvard NEON data documented here: (https://github.com/EcoClimLab/vertical-thermal-review/blob/master/NEON_height_profiles/HARV_neon_stats.csv). Leaf trait measurements for effective leaf width was measured on ~Quercus rubra~ sun and shade leaf, stomatal conductance measurements were refered from Tleaves typical sun and shade measurements [@muir_tealeaves_2019] and as well @cavender-baresChangesDroughtResponse2000. Energy balance for biophysical variables in drought scenario were parameterized using Harvard NEON data as well. Leaf trait measurements for effective leaf width is the same as typical scenario, stomatal conductance was referred from @cavender-baresChangesDroughtResponse2000. In each variable visual, all variables are constant except for the independent variable that represents minimum - maximum range.
+Energy balance for typical overstory sun leaf and understory shade leaf were parameterized with biophysical variables from Harvard NEON data documented here: (https://github.com/EcoClimLab/vertical-thermal-review/blob/master/NEON_height_profiles/HARV_neon_stats.csv). Leaf trait measurements for effective leaf width was measured on ~Quercus rubra~ sun and shade leaf, stomatal conductance measurements were refered from Tleaves typical sun and shade measurements [@muir_tealeaves_2019] and as well @cavender-baresChangesDroughtResponse2000. Energy balance for biophysical variables in drought scenario were parameterized using Harvard NEON data as well. Leaf trait measurements for effective leaf width is the same as typical scenario, stomatal conductance was referred from @cavender-baresChangesDroughtResponse2000. In each visual, all variables are constant except for the independent variable that represents minimum - maximum range.
 
 \newpage
 
